cqlite-core/tests/snapshots/contract_stability_tests__contract_value_float32.snap
---
source: cqlite-core/tests/contract_stability_tests.rs
assertion_line: 261
expression: "Value::Float32(2.5)"
---
{
  "Float32": 2.5
}
