cqlite-core/tests/snapshots/contract_stability_tests__contract_value_inet_ipv6.snap
---
source: cqlite-core/tests/contract_stability_tests.rs
assertion_line: 326
expression: "Value::Inet(vec![0x20, 0x01, 0x0d, 0xb8, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n0x00, 0x00, 0x00, 0x00, 0x00, 0x01,])"
---
{
  "Inet": [
    32,
    1,
    13,
    184,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1
  ]
}
