cqlite-core/tests/snapshots/contract_stability_tests__contract_value_integer.snap
---
source: cqlite-core/tests/contract_stability_tests.rs
assertion_line: 164
expression: "Value::Integer(42)"
---
{
  "Integer": 42
}
