cqlite-core/tests/snapshots/contract_stability_tests__contract_value_list.snap
---
source: cqlite-core/tests/contract_stability_tests.rs
assertion_line: 266
expression: "Value::List(vec![Value::Integer(1), Value::Integer(2), Value::Integer(3),])"
---
{
  "List": [
    {
      "Integer": 1
    },
    {
      "Integer": 2
    },
    {
      "Integer": 3
    }
  ]
}
