cqlite-core/tests/snapshots/contract_stability_tests__contract_value_map.snap
---
source: cqlite-core/tests/contract_stability_tests.rs
assertion_line: 283
expression: "Value::Map(vec![(Value::Text(\"key1\".to_string()), Value::Integer(1)),\n(Value::Text(\"key2\".to_string()), Value::Integer(2)),])"
---
{
  "Map": [
    [
      {
        "Text": "key1"
      },
      {
        "Integer": 1
      }
    ],
    [
      {
        "Text": "key2"
      },
      {
        "Integer": 2
      }
    ]
  ]
}
