cqlite-core/tests/snapshots/contract_stability_tests__contract_value_null.snap
---
source: cqlite-core/tests/contract_stability_tests.rs
assertion_line: 154
expression: "Value::Null"
---
"Null"
