cqlite-core/tests/snapshots/contract_stability_tests__contract_value_set.snap
---
source: cqlite-core/tests/contract_stability_tests.rs
assertion_line: 275
expression: "Value::Set(vec![Value::Text(\"a\".to_string()), Value::Text(\"b\".to_string()),])"
---
{
  "Set": [
    {
      "Text": "a"
    },
    {
      "Text": "b"
    }
  ]
}
