cqlite-core/tests/snapshots/contract_stability_tests__contract_value_smallint.snap
---
source: cqlite-core/tests/contract_stability_tests.rs
assertion_line: 256
expression: "Value::SmallInt(32767)"
---
{
  "SmallInt": 32767
}
